@@ -1,5 +1,10 @@
 2002-01-17  Dominik Vogt  <dominik.vogt@gmx.de>
 
+	* fvwm/functions.c (expand):
+	fixed core dump when using something like $[$v] in a command
+
+2002-01-17  Dominik Vogt  <dominik.vogt@gmx.de>
+
 	* fvwm/update.c (flush_window_updates):
 	fixed unnecessary window style updates
 
